Require flickrapi 1.4.5 for Python 2
flickrapi 1.4.4 installs a logger, which breaks script tests.
flickrapi 1.4.5 and flickrapi 2.x do not have this problem.
Require 1.4.5 to avoid this problem, and to remain on a stable
version which is easy to install on unix systems.

This issue is not relevant to Python 3, as only flickrapi 2.x
will work on Python 3, and setuptools automatically selects it.

Bug: 71454
Change-Id: I58b732a3dae69797fe9bc27067a666c091be2e93

--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,12 @@ argparse
 # scripts/flickrripper.py
 Pillow
 flickrapi
+# On Python 2, flickrapi 1.4 or 2.x may be used.  On Python 3, it must be 2.x.
+# The above automatically selects 2.x, which depends on requests 2.x, which
+# may cause pip to report an error like the following...
+# pkg_resources.VersionConflict: (requests 1.2.3 (/usr/lib/python2.7/site-packages), Requirement.parse('requests>=2.2.1'))
+# If you see that on Python 2, change the above to flickrapi==1.4.5
+# On Python 3, force pip to install requests 2.2.1, or remove flickrapi above.
 
 # scripts/tests/test_data_ingestion.py
 test_utils
