--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -6,3 +6,38 @@ sphinx-epytext>=0.0.3
 # mandatory; see README.conversion.txt
 httplib2>=0.9.0
 
+# core option 'daemonize':
+daemonize
+
+# core interwiki_graph.py:
+pydot
+
+# core pagegenerators
+yahoo
+google
+
+# scripts/script_wui.py:
+crontab
+
+# scipts/replicate_wiki.py
+argparse
+
+# scripts/flickrripper.py
+Pillow
+flickrapi
+
+# scripts/tests/test_data_ingestion.py
+test_utils
+
+# incomplete core component botirc
+irc
+
+# textlib.py
+mwparserfromhell>=0.3.3
+
+# The mysql generator in pagegenerators depends on either oursql or MySQLdb
+# pywikibot prefers oursql
+oursql
+
+# scripts/script_wui.py depends on Lua, which is not available using pip
+# but can be obtained from: https://github.com/bastibe/lunatic-python
