Dont set minimum sphinx version
Change-Id: I4a02203bf6b2fad57f799c8f0d96a0adbe17b203

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,7 +1,7 @@
 # This is a PIP requirements file, including all dependencies for pywikibot
 # and 'sphinx-epytext' which is required for sphinx documentation.
 
-sphinx==1.2.3
+sphinx==1.3b1
 sphinx-epytext>=0.0.3
 
 # mandatory; see README.conversion.txt
