--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: python
 python:
   - '2.7'
   - '3.3'
+  - '3.4'
   - '2.6'
 
 before_install:
@@ -10,7 +11,7 @@ before_install:
   - sudo apt-get install -y liblua5.1-dev
 
 install:
-  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then pip install ordereddict unittest2==0.6.0; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then pip install ordereddict unittest2>=0.8; fi
   - pip install six
   - export GITHUB_USER=`echo $TRAVIS_REPO_SLUG | cut -d '/' -f 1`
   - mkdir ~/.pywikibot
@@ -53,7 +54,6 @@ env:
     # Command use to generate: travis encrypt USER_PASSWORD=<pwd> -r wikimedia/pywikibot-core
     - secure: kofInMlisiTBt9o/Ustc/vySlkKfxGzGCX2LwA1D2waym8sDTS0o5gMJ5LsrT/BUKwZbe1vLozPHqZrrkQvsdTml+DpZuotzdILs0m0f3BUoexEC6OON5IDljuxFyETrD1Ug44ih5Mc4lVFOdTcBzg501ZmswGwQrBvg/OyEFfE=
   matrix:
-    - LANGUAGE=en FAMILY=wikipedia
     - LANGUAGE=ar FAMILY=wikipedia PYSETUP_TEST_EXTRAS=1
     - LANGUAGE=test FAMILY=wikidata
     - LANGUAGE=fr FAMILY=wiktionary
