--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ install:
 
   - echo "max_retries = 2" >> ~/.pywikibot/user-config.py
   - echo "maximum_GET_length = 5000" >> ~/.pywikibot/user-config.py
+  - echo "http_threads = 5" >> ~/.pywikibot/user-config.py
 
   - if [[ "$GITHUB_USER" == "wikimedia" ]]; then PYWIKIBOT2_USERNAME="Pywikibot-test"; fi
 
