--- a/.travis.yml
+++ b/.travis.yml
@@ -67,8 +67,8 @@ env:
     # See http://docs.travis-ci.com/user/encryption-keys/ for more information.
     - secure: kofInMlisiTBt9o/Ustc/vySlkKfxGzGCX2LwA1D2waym8sDTS0o5gMJ5LsrT/BUKwZbe1vLozPHqZrrkQvsdTml+DpZuotzdILs0m0f3BUoexEC6OON5IDljuxFyETrD1Ug44ih5Mc4lVFOdTcBzg501ZmswGwQrBvg/OyEFfE=
   matrix:
-    - LANGUAGE=en FAMILY=wikipedia
-    - LANGUAGE=ar FAMILY=wikipedia PYSETUP_TEST_EXTRAS=1
+    - LANGUAGE=en FAMILY=wikipedia USE_NOSE=1
+    - LANGUAGE=ar FAMILY=wikipedia PYSETUP_TEST_EXTRAS=1 USE_NOSE=1
     - LANGUAGE=test FAMILY=wikidata SITE_ONLY=1
     - LANGUAGE=fr FAMILY=wiktionary SITE_ONLY=1
 
